# storage/api-docs/api-docs.json
@@ -266,6 +266,134 @@
                 }
             }
         },
+        "/api/messages": {
+            "get": {
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Lister tous les messages",
+                "operationId": "4216f3eedb7be911361f1b91030253a8",
+                "responses": {
+                    "200": {
+                        "description": "Succès"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Créer un nouveau message",
+                "operationId": "c85a9171473a13f151a8672235e01559",
+                "requestBody": {
+                    "description": "Données du message",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Message"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Message créé avec succès"
+                    }
+                }
+            }
+        },
+        "/api/messages/{id}": {
+            "get": {
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Récupérer un message par ID",
+                "operationId": "2d72cf14bf2d55c9c9dfd297da04d404",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID du message",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Succès"
+                    },
+                    "404": {
+                        "description": "Message non trouvé"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Mettre à jour un message",
+                "operationId": "f5c039674f51b998b915d3172b879661",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID du message",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Données du message à mettre à jour",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Message"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Message mis à jour avec succès"
+                    },
+                    "404": {
+                        "description": "Message non trouvé"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Supprimer un message",
+                "operationId": "3900a1f5d7b34a2d1a02b42535a3fdd9",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID du message",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Message supprimé avec succès"
+                    },
+                    "404": {
+                        "description": "Message non trouvé"
+                    }
+                }
+            }
+        },
         "/api/profiles": {
             "get": {
                 "tags": [
@@ -827,6 +955,28 @@
                 },
                 "type": "object"
             },
+            "Message": {
+                "properties": {
+                    "match_id": {
+                        "type": "integer",
+                        "example": ""
+                    },
+                    "sender_id": {
+                        "type": "integer",
+                        "example": ""
+                    },
+                    "content": {
+                        "type": "string",
+                        "example": ""
+                    },
+                    "sent_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": ""
+                    }
+                },
+                "type": "object"
+            },
             "Profile": {
                 "properties": {
                     "firstname": {
@@ -910,6 +1060,10 @@
         {
             "name": "Matches",
             "description": "Matches"
+        },
+        {
+            "name": "Messages",
+            "description": "Messages"
         },
         {
             "name": "Profiles",
